Added quotes on user/pass, added status for nobackup

--- a/unifi.cfg
+++ b/unifi.cfg
@@ -2,8 +2,8 @@
 # needs to be placed in /etc/check_mk as unifi.cfg by default
 
 # Settings for the controller-binding
-USERNAME=someuser
-PASSWORD=somepass
+USERNAME="someuser"
+PASSWORD="somepass"
 BASEURL=https://demo.ui.com
 
 # additional curl options
@@ -17,3 +17,4 @@ STATUS_PROVISIONING=1
 STATUS_UPGRADING=1
 STATUS_UPGRADABLE=0
 STATUS_HEARTBEAT_MISSED=1
+STATUS_NOBACKUP=1
