added USE_SITE_PREFIX option

--- a/unifi.cfg
+++ b/unifi.cfg
@@ -9,7 +9,7 @@ BASEURL=https://demo.ui.com
 # additional curl options
 # - insecure-flag is needed if a self-signed certificate is used and is not imported in linux - usually okay if controller is running locally
 # - enforce a specific version of TLS
-CURLOPTS=" --insecure --tlsv1.2"
+CURLOPTS="--insecure --tlsv1.2 -H Content-Type: application/json"
 
 # mapping of device's states to check_mk statuses
 # STATUS: 0 = OK, 1 = WARN, 2 = CRIT, 3 = UNKN
@@ -18,3 +18,6 @@ STATUS_UPGRADING=1
 STATUS_UPGRADABLE=0
 STATUS_HEARTBEAT_MISSED=1
 STATUS_NOBACKUP=1
+
+# adds site name in the checkmk service per device to allow multiple names with same name on different sites
+USE_SITE_PREFIX=0
