--- a/unifi.cfg
+++ b/unifi.cfg
@@ -2,9 +2,9 @@
 # needs to be placed in /etc/check_mk as unifi.cfg by default
 
 # Settings for the controller-binding
-USERNAME="someuser"
-PASSWORD="somepass"
-BASEURL=https://demo.ui.com
+USERNAME=$UNIFI_USER
+PASSWORD=$UNIFI_PASS
+BASEURL=$UNIFI_URL
 
 # additional curl options
 # - insecure-flag is needed if a self-signed certificate is used and is not imported in linux - usually okay if controller is running locally
